secondary fix for horizontal scroll bar

--- a/src/App.css
+++ b/src/App.css
@@ -95,6 +95,6 @@
   .App {
     border-left: 1px solid var(--body-color);
     border-right: 1px solid var(--body-color);
-    overflow-y: hidden;
+    overflow-x: hidden;
   }
 }
